<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">老伴医生</string>
    <string name="login_name">请输入用户名</string>
	<string name="login_password">请输入密码</string>
	<string name="login_ok">成功，请稍等</string>
	<string name="login_err">输入错误</string>
	<string name="message_login">正在登陆，请稍等</string>
	<string name="action_doctor">重选医生</string>
	<string name="action_refresh">刷新数据</string>
	
	
    <string name="action_settings">Settings</string>
    <string name="confirm_str">确定</string>
    <string name="select_doctor">请选择医生</string>
    <string name="select_room">选择房间</string>
    <string name="select_elder">选择老人</string>
    <string name="select_item">选择项目</string>
    <string name="room_string">房间</string>
    <string name="elder_string">老人</string>
    <string name="item_string">项目</string>
    <string name="button_1">查看已配对的设备</string>
    <string name="button_2">搜索未配对的设备</string>
    <string name="button_3">开始测量</string>
    <string name="empty_str"></string>
    <string name="first_content">蓝牙设备列表：</string>
    <string name="current_room">当前房间：</string>
    <string name="current_elder">当前老人：</string>
    <string name="current_item">当前项目：</string>
    <string name="active_device">激活设备</string>
    <string name="recent_temp_data">近期体温数据</string>
    <string name="start_socket">连接</string>
    <string name="bp_test">测量血压</string>
    <string name="send_msg">验证</string>
    <string name="measure">测量</string>
    <string name="angle">角度</string>
    <string name="upperbp">舒张压:</string>
    <string name="lowerbp">收缩压:</string>
    <string name="heartrate">心率:</string>
    <string name="submit">提交</string>
    <string name="again">重测</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="bp_tag">测量血压</string>
    <string name="ecg_tag">心电图</string>
    <string name="tem_tag">测量体温</string>
    <string name="select_building">选择 楼栋</string>
    <string name="select_floor">选择 楼层</string>
    <string name="select_building_str"></string>
    <string name="select_str">选中了</string>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
