<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bowen.spinner.MeasurementActivity" >

    <TextView
    	android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_room" />
        
    <TextView
    	android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_room" />
        
    <TextView
    	android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_elder" />
        
    <TextView
    	android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_elder" />
        
    <TextView
    	android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_item" />
                
    <TextView
    	android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/current_item" />
        
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/active_device"
		android:id="@+id/active_device"
		android:onClick="beginMeasure"/>
		
	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/confirm_str"
		android:id="@+id/measure_confirm_btn"
		android:onClick="beginMeasure"/>
		
		
</LinearLayout>