<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjtu.idoctor.view.LoginActivity" >

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	    <EditText
	      android:id="@+id/name"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:hint="@string/login_name"
	      android:singleLine="true" />
	    <EditText
	      android:id="@+id/password"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:inputType="textPassword"
	      android:hint="@string/login_password"
	      android:singleLine="true" />
	    <Button
	      android:id="@+id/button"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:onClick=""
	      android:text="@string/submit" />
  </LinearLayout>

</RelativeLayout>
