<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bowen.bowen.BloodPressure$PlaceholderFragment" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		    android:background="@drawable/header_style"
		android:paddingTop="10dip"
		android:orientation="horizontal" >
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="24dip"
	        android:textColor="#000000"
	        android:text="@string/current_room" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="18dip"
	        android:textColor="#666666"
	        android:id="@+id/current_room" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="24dip"
	        android:textColor="#000000"
	        android:text="@string/current_elder" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="18dip"
	        android:textColor="#666666"
	        android:id="@+id/current_elder" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="24dip"
	        android:textColor="#000000"
	        android:text="@string/current_item" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18dip"
	        android:textColor="#666666"
	        android:id="@+id/current_item" />

	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="800dip"
		android:orientation="horizontal"
		android:id="@+id/content"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:id="@+id/web">
			
	        <WebView
	            android:id="@+id/webView1"
				android:paddingTop="80dip"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" />
	            
	        <WebView
	            android:id="@+id/webView2"
				android:paddingTop="80dip"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent" />
			
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent" 
			android:layout_weight="2"
			android:layout_height="match_parent"
			android:paddingTop="80dip"
			android:id="@+id/right_container"
			android:orientation="vertical"
			>		
		        
		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:paddingLeft="10dip"
		    	android:paddingRight="10dip"
		    	android:text="@string/start_socket"
		    	android:id="@+id/start_btn"
		    	android:onClick="startIdentify"
		    	/>
		    	
		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:text="@string/send_msg"
		    	android:id="@+id/send_msg"
		    	android:onClick="sendMsg"
		    	/>
		    	
		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:text="@string/angle"
		    	android:id="@+id/angle_btn"
		    	android:onClick="sendAngleReady"
		    	/>	
		    	
		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:text="@string/measure"
		    	android:id="@+id/measure_btn"
		    	android:onClick="measureBegin"
		    	/>
    	
		</LinearLayout>
		
		</LinearLayout>

</LinearLayout>
