<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bowen.bowen.BloodPressure" >

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/header_style"
		android:paddingTop="10dip"
		android:orientation="horizontal" >
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="24dip"
	        android:textColor="#000000"
	        android:text="@string/current_room" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="18dip"
	        android:textColor="#666666"
	        android:id="@+id/current_room" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="24dip"
	        android:textColor="#000000"
	        android:text="@string/current_elder" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="18dip"
	        android:textColor="#666666"
	        android:id="@+id/current_elder" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight = "100dip"
	        android:textSize="24dip"
	        android:textColor="#000000"
	        android:text="@string/current_item" />
	    
	    <TextView
	    	android:gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18dip"
	        android:textColor="#666666"
	        android:id="@+id/current_item" />

	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="80dip"
		android:orientation="horizontal"
		android:id="@+id/content"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="800dip"
			android:layout_weight="2"
			android:id="@+id/web">
			
	        <WebView
	            android:id="@+id/webView1"
				android:paddingTop="80dip"
	            android:layout_width="match_parent"
	            android:layout_height="500dip" />
			
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="match_parent" 
			android:layout_weight="2"
			android:layout_height="match_parent"
			android:paddingTop="40dip"
			android:layout_margin="10dip"
		    android:gravity="center_horizontal"
			android:id="@+id/right_container"
			android:orientation="vertical"
			>		
		        
		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:paddingLeft="10dip"
		    	android:paddingRight="10dip"
				android:layout_marginBottom="50dip"
		    	android:text="@string/start_socket"
		    	android:id="@+id/start_btn"
			    android:textColor="#FFFFFF"
			    android:textSize="34dip"
		    	android:onClick="bpMeasureClick"
		    	android:background="@drawable/bg_special_disease_circle_2"
		    	/>
		    	
<!-- 		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
				android:layout_marginTop="2dip"
		    	android:text="@string/angle"
		    	android:id="@+id/angle_btn"
		    	android:onClick="sendAngleReady"
		    	/>	
		    	
		    <Button
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
				android:layout_marginTop="2dip"
				android:layout_marginBottom="2dip"
		    	android:layout_gravity="center"
		    	android:text="@string/measure"
		    	android:id="@+id/measure_btn"
		    	android:onClick="measureBegin"
		    	/> -->
		    <LinearLayout
		    	android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:paddingTop="5dip"
		    	android:paddingBottom="15dip"
				android:background="@drawable/corners_bg"
		    	android:orientation="vertical">
		    	
		    	<LinearLayout
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="40dip"
			    	android:paddingLeft="100dip"
			    	android:orientation="horizontal" >
			    	
			    	<TextView
			    		android:layout_width="wrap_content"
			    		android:layout_height="match_parent"
				        android:textSize="24dip"
				        android:textColor="#FFFFFF"
			    		android:text="@string/upperbp"/>
			    		
			    	<TextView
			    		android:layout_width="80dip"
			    		android:layout_height="match_parent"
				        android:textSize="24dip"
				        android:textColor="#99BCEF"
			    		android:id="@+id/upperbp"/>
			    	<TextView
			    		android:layout_width="wrap_content"
			    		android:layout_height="match_parent"
				        android:textSize="24dip"
				        android:textColor="#FFFFFF"
			    		android:text="@string/lowerbp"/>
			    	<TextView
			    		android:layout_width="80dip"
			    		android:layout_height="match_parent"
				        android:textSize="24dip"
				        android:textColor="#99BCEF"
			    		android:id="@+id/lowerbp"/>
			    	<TextView
			    		android:layout_width="wrap_content"
			    		android:layout_height="match_parent"
				        android:textSize="24dip"
				        android:textColor="#FFFFFF"
			    		android:text="@string/heartrate"/>
			    	<TextView
			    		android:layout_width="80dip"
			    		android:layout_height="match_parent"
				        android:textSize="24dip"
				        android:textColor="#99BCEF"
			    		android:id="@+id/heartrate"/>
			    </LinearLayout>
			    
			    <LinearLayout
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:layout_marginTop="40dip"
			    	android:orientation="horizontal" >
			    	<Button
				    	android:layout_width="wrap_content"
				    	android:gravity="center"
				    	android:text="@string/submit"
				    	android:id="@+id/submit"
				    	android:onClick="submit"
					    android:textSize="30sp"
					    android:textColor="#FFFFFF"
					    android:background="#EB7A77"
					    android:layout_height="60dp"
					    android:layout_weight="1"
					    android:layout_margin="12dp"
			    	/> 
			    	
			    	<Button
				    	android:layout_width="wrap_content"
				    	android:gravity="center"
				    	android:text="@string/cancel"
				    	android:id="@+id/back"
				    	android:onClick="back"
					    android:textSize="30sp"
					    android:textColor="#FFFFFF"
					    android:background="#EB7A77"
					    android:layout_height="60dp"
					    android:layout_weight="1"
					    android:layout_margin="12dp"
			    	/>		   	
			    </LinearLayout>
		    </LinearLayout>

    	
		</LinearLayout>
		
		</LinearLayout>

</LinearLayout>